<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.aniksarder.keepclean.UserActivity.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Registration"
        android:gravity="center"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="40dp"/>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorBlack"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/EditTextConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorRed"
        android:background="@drawable/rounded_button_transparent"
        android:text="@string/text_register" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/ash_ash"></View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_member"
        android:textSize="17sp"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnViewLoginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorRed"
        android:background="@drawable/rounded_button_transparent"
        android:text="@string/text_login" />

</LinearLayout>
