<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.aniksarder.keepclean.UserActivity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User LogIn"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="cursive"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="40dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/textColor"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:backgroundTint="@color/colorRed"
        android:background="@drawable/rounded_button_transparent"
        android:text="@string/text_login"
        android:textColor="@color/textColor"
        android:textAllCaps="false"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/botton_forgot_password"
        android:textColor="@color/colorBlack"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/ash_ash"></View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Don't have an account ?"
        android:textSize="16sp"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnLinkRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:backgroundTint="@color/colorRed"
        android:background="@drawable/rounded_button_transparent"
        android:text="@string/botton_sign_up"
        android:textColor="@color/textColor"
        android:textAllCaps="false"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        />

</LinearLayout>
